--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -4,5 +4,21 @@
 
 
 .header-bg{
-  background-color: #5ec1e2;
+  background-color: rgb(77, 167, 194);
 }
+
+.underHeader{
+
+}
+
+.postMainBackground{
+
+}
+
+.postTitleBackground{}
+
+.userNameBackground{}
+
+.post
+
+
