--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
+/* 
 .header-bg{
   background-color: rgb(77, 167, 194);
-}
-
+} */
+/* 
 .underHeader{
 
 }
@@ -19,6 +19,6 @@
 
 .userNameBackground{}
 
-.post
+.post */
 
 
