--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,11 +1,26 @@
 {{> homeModal}}
 
 <div class="container mx-auto px-4">
-    <div class="bg-white">
+    <div class="bg-black">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
             <div
                 class="mx-auto mt-2 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-2 sm:mt-2 sm:pt-2 lg:mx-0 lg:max-w-none lg:grid-cols-3">
             </div>
+            <section>
+                <p class="photoHome">
+                    <img src = "../public/assets/images/logo_backgroud_removed.png">
+                </p>    
+            </section>
+            <section class = "mainBody">
+                <p>StudentLink is a free student study system helping students connect across states, time zones and college loyalties. You can link with a fellow student taking the same course as you. Bring your questions and ideas!</p>
+                <p>Create a new post with your username, the subject and the course you are in, then put in your email so others can contact you. Then you can connect with each other using zoom, discord or etc. This way you can study anytime with anyone who is currently avalible. </p>
+            </section>
+            <section class="warning">
+                 <p>Contacting someone to send them harmful or lewd content without their permission will result in you being barred from our site.</p>
+            </section>
+            <footer></footer>
+            <div></div>
         </div>
     </div>
 </div>
+
