--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -43,7 +43,7 @@
                             aria-current="page">Dashboard</a>
                         {{#if dashboard}}
                             <a href="/subject"
-                            class="{{#if subject}}bg-gray-900 text-white{{else}}text-gray-300 hover:bg-gray-700 hover:text-white{{/if}} rounded-md px-3 py-2 text-sm font-medium">Subject</a>
+                            class="{{#if subject}}bg-gray-900 text-white{{else}}text-gray-300 hover:bg-gray-700 hover:text-white{{/if}} rounded-md px-3 py-2 text-sm font-medium">Your Dashboard</a>
                         {{/if}}
                     </div>
                 </div>
