--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -7,7 +7,7 @@
                     class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                     aria-controls="mobile-menu" aria-expanded="false">
                     <span class="absolute -inset-0.5"></span>
-                    <span class="sr-only">Open main menu</span>
+                    <span class="sr-only"></span>
                     <!--
             Icon when menu is closed.
 
@@ -43,7 +43,7 @@
                             aria-current="page">Dashboard</a>
                         {{#if dashboard}}
                             <a href="/subject"
-                            class="{{#if subject}}bg-gray-900 text-white{{else}}text-gray-300 hover:bg-gray-700 hover:text-white{{/if}} rounded-md px-3 py-2 text-sm font-medium">Your Dashboard</a>
+                            class="{{#if subject}}bg-gray-900 text-white{{else}}text-gray-300 hover:bg-gray-700 hover:text-white{{/if}} rounded-md px-3 py-2 text-sm font-medium">Your Posts</a>
                         {{/if}}
                     </div>
                 </div>
@@ -87,12 +87,6 @@
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
             <a href="#" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium"
                 aria-current="page">Dashboard</a>
-            <a href="#"
-                class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Team</a>
-            <a href="#"
-                class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Projects</a>
-            <a href="#"
-                class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Calendar</a>
         </div>
     </div>
 </nav>
