--- a/views/forms/register_form.hbs
+++ b/views/forms/register_form.hbs
@@ -1,38 +1,38 @@
 <div class="bg-grey-lighter min-h-screen flex flex-col">
-    <div class="container max-w-sm mx-auto flex-1 flex flex-col items-center justify-center px-2">
-        <div class="bg-white px-6 py-8 rounded shadow-lg text-black w-full">
+   <div class="sm:mx-auto sm:w-full sm:max-w-sm py-16">
+        {{!-- <div class="bg-white px-6 py-8 rounded shadow-lg text-black w-full"> --}}
             <form action="/register" method="POST">
                 <h1 class="mb-8 text-3xl text-center font-bold">Sign up</h1>
-                <input type="text" class="block border border-grey-light w-full p-3 rounded mb-4" name="username"
+                <input type="text" class="block border border-blue-200 w-full p-3 rounded mb-4" name="username"
                     placeholder="User Name" />
 
-                <input type="email" class="block border border-grey-light w-full p-3 rounded mb-4" name="email"
+                <input type="email" class="block border border-blue-200 w-full p-3 rounded mb-4" name="email"
                     placeholder="Email" />
 
-                <input type="password" class="block border border-grey-light w-full p-3 rounded mb-4" name="password"
+                <input type="password" class="block border border-blue-200 w-full p-3 rounded mb-4" name="password"
                     placeholder="Password" />
-                <input type="password" class="block border border-grey-light w-full p-3 rounded mb-4"
+                <input type="password" class="block border border-blue-200 w-full p-3 rounded mb-4"
                     name="confirm_password" placeholder="Confirm Password" />
 
                 <button type="submit"
-                    class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Create
+                    class="flex w-full justify-center rounded-md bg-blue-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600">Create
                     Account</button>
 
-                <div class="text-center text-sm text-grey-dark mt-4">
+                {{!-- <div class="text-center text-sm text-grey-dark mt-4">
                     By signing up, you agree to the
                     <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
                         Terms of Service
                     </a> and
                     <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
                         Privacy Policy
-                    </a>
+                    </a> --}}
                 </div>
             </form>
         </div>
 
         <div class="text-grey-dark mt-6">
             Already have an account?
-            <a class="no-underline border-b border-blue text-blue" href="../login/">
+            <a class="no-underline border-b border-blue text-blue-500" href="../login/">
                 Log in
             </a>.
         </div>
