userdata controller route updated

--- a/views/forms/allPosts.hbs
+++ b/views/forms/allPosts.hbs
@@ -13,8 +13,11 @@
         <p class="block antialiased tracking-normal font-sans text-xl font-semibold leading-snug text-blue-500">{{subject}}</p>
         <h4 class="block antialiased tracking-normal font-sans text-2xl font-semibold leading-snug text-white">{{title}}</h4>
         <div class="flex">
+          <a href="#">
         <p class="block antialiased tracking-normal font-sans text-1xl font-semibold leading-snug text-white mr-2">{{username}}</p>
+        </a>
         <p class="block antialiased tracking-normal font-sans text-1xl font-semibold leading-snug text-gray-400">{{subject_level}}</p>
+        
         </div>
         <hr class="h-0.5 my-2 bg-gray-200 border-0 dark:bg-gray-700">
         <p class="block antialiased font-sans text-base font-light leading-relaxed text-white my-2 font-normal">{{post_text}}</p>
