--- a/views/allPosts.hbs
+++ b/views/allPosts.hbs
@@ -13,7 +13,7 @@
         <p class="block antialiased tracking-normal font-sans text-xl font-semibold leading-snug text-blue-500">{{subject}}</p>
         <h4 class="block antialiased tracking-normal font-sans text-2xl font-semibold leading-snug text-white">{{title}}</h4>
         <div class="flex">
-          <a href="#">
+          <a href="/userprofile/{{username}}">
         <p class="block antialiased tracking-normal font-sans text-1xl font-semibold leading-snug text-white mr-2">{{username}}</p>
         </a>
         <p class="block antialiased tracking-normal font-sans text-1xl font-semibold leading-snug text-gray-400">{{subject_level}}</p>
