--- a/views/forms/postform.hbs
+++ b/views/forms/postform.hbs
@@ -1,14 +1,14 @@
   <form action="/create/post" method="POST">
-<div class="heading text-center font-bold text-2xl m-5 text-gray-800">Study Post</div>
+<div class="mb-2 text-3xl text-center font-bold py-6">Study Post</div>
 <style>
   body {background:white !important;}
 </style>
-  <div class="editor mx-auto w-10/12 flex flex-col text-gray-800 border border-gray-300 p-4 shadow-lg max-w-2xl">
-    <input name="title" class="title bg-gray-100 border border-gray-300 p-2 mb-4 outline-none" spellcheck="false" placeholder="Title" type="text">
-    <input name="subject" class="title bg-gray-100 border border-gray-300 p-2 mb-4 outline-none" spellcheck="false" placeholder="Subject" type="text">
-    <input name="subject_level" class="title bg-gray-100 border border-gray-300 p-2 mb-4 outline-none" spellcheck="false" placeholder="Knowledge Level (e.g Novice, Beginner, Advanced, Expert)" type="text">
-    <textarea name="post_text" class="description bg-gray-100 sec p-3 mb-4 h-60 border border-gray-300 outline-none" spellcheck="false" placeholder="Describe everything about this post here and add relevant links"></textarea>
-    <input name="meeting_info" class="title bg-gray-100 border border-gray-300 p-2 mb-4 outline-none" spellcheck="false" placeholder="Study Session Info (e.g Zoom Link, Meeting Location)" type="text">
+  <div class="editor mx-auto w-10/12 flex flex-col text-gray-800 border border-gray-300 p-4 max-w-2xl">
+    <input name="title" class="block border border-blue-200 w-full p-3 rounded mb-4" spellcheck="false" placeholder="Title" type="text">
+    <input name="subject" class="block border border-blue-200 w-full p-3 rounded mb-4" spellcheck="false" placeholder="Subject" type="text">
+    <input name="subject_level" class="block border border-blue-200 w-full p-3 rounded mb-4" spellcheck="false" placeholder="Knowledge Level (e.g Novice, Beginner, Advanced, Expert)" type="text">
+    <textarea name="post_text" class="block border border-blue-200 w-full p-3 rounded mb-4" spellcheck="false" placeholder="Describe everything about this post here and add relevant links"></textarea>
+    <input name="meeting_info" class="block border border-blue-200 w-full p-3 rounded mb-4" spellcheck="false" placeholder="Study Session Info (e.g Zoom Link, Meeting Location)" type="text">
 
 
     
