--- a/views/forms/register_form.hbs
+++ b/views/forms/register_form.hbs
@@ -2,7 +2,7 @@
    <div class="sm:mx-auto sm:w-full sm:max-w-sm py-16">
         {{!-- <div class="bg-white px-6 py-8 rounded shadow-lg text-black w-full"> --}}
             <form action="/register" method="POST">
-                <h1 class="mb-8 text-3xl text-center font-bold">Sign up</h1>
+                <h1 class="mb-8 text-3xl text-center font-bold">Sign Up</h1>
                 <input type="text" class="block border border-blue-200 w-full p-3 rounded mb-4" name="username"
                     placeholder="User Name" />
 
